<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.micrm.fragments.PersonaFragment">

    <EditText
        android:id="@+id/txt_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/persona_hint_nombre"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txt_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/persona_hint_telefono"
        android:inputType="phone" />

    <EditText
        android:id="@+id/txt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/persona_hint_email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/btn_persona"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/persona_btn_agregar" />

</LinearLayout>
